ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev
spec:
  rules:
  - host: http://104.198.205.14/
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 80
